# owner-frontend/api/models/GmService.ts
@@ -1,0 +1,81 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * GM-Owner API
+ * OpenAPI-Spezifikation der owner-API
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface GmService
+ */
+export interface GmService {
+    /**
+     * name oder id des Service
+     * @type {string}
+     * @memberof GmService
+     */
+    name?: string;
+    /**
+     * url des Service
+     * @type {string}
+     * @memberof GmService
+     */
+    url?: string;
+    /**
+     * region des Service
+     * @type {string}
+     * @memberof GmService
+     */
+    region?: string;
+}
+
+/**
+ * Check if a given object implements the GmService interface.
+ */
+export function instanceOfGmService(value: object): value is GmService {
+    return true;
+}
+
+export function GmServiceFromJSON(json: any): GmService {
+    return GmServiceFromJSONTyped(json, false);
+}
+
+export function GmServiceFromJSONTyped(json: any, ignoreDiscriminator: boolean): GmService {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'name': json['name'] == null ? undefined : json['name'],
+        'url': json['url'] == null ? undefined : json['url'],
+        'region': json['region'] == null ? undefined : json['region'],
+    };
+}
+
+  export function GmServiceToJSON(json: any): GmService {
+      return GmServiceToJSONTyped(json, false);
+  }
+
+  export function GmServiceToJSONTyped(value?: GmService | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'name': value['name'],
+        'url': value['url'],
+        'region': value['region'],
+    };
+}
+
