# owner-frontend/api/models/index.ts
@@ -2,6 +2,6 @@
 /* eslint-disable */
 export * from './Customisation';
 export * from './ErrorResponse';
-export * from './Service';
+export * from './GmService';
 export * from './Services';
 export * from './Tenant';
